lora_training_log_20251120_050717.txt
=========================================
Mobile VLA LoRA Fine-tuning
Date: 2025-11-14
=========================================

📄 Config: ../Mobile_VLA/configs/mobile_vla_20251114_lora.json
🔧 Device: CUDA
📦 Model: Kosmos-2 with LoRA

🔍 CUDA 확인...
  (학습 시작 시 자동 확인)

📊 데이터셋 확인...
  - Found 237 episodes matching pattern 'episode_2025111*.h5'
  ✅ Episodes found

🚀 LoRA Fine-tuning 시작...
   - Using RoboVLMs main.py
   - Dataset: MobileVLAH5Dataset
   - LoRA: r=32, alpha=16, dropout=0.1
   - Epochs: 10

Path /home/billy/25-1kp/vla/RoboVLMs_upstream/wheels/torch-2.3.0-cp310-cp310-linux_aarch64.whl for torch does not exist
Path /home/billy/25-1kp/vla/RoboVLMs_upstream/wheels/torchvision-0.18.0a0+6043bc2-cp310-cp310-linux_aarch64.whl for torchvision does not exist
Path /home/billy/25-1kp/vla/RoboVLMs_upstream/wheels/torchaudio-2.3.0+952ea74-cp310-cp310-linux_aarch64.whl for torchaudio does not exist
Traceback (most recent call last):
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/main.py", line 33, in <module>
    from robovlms.train.base_trainer import BaseTrainer
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/train/base_trainer.py", line 16, in <module>
    import robovlms.model.backbone as RoboVLM_Backbone
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/model/backbone/__init__.py", line 1, in <module>
    from .roboflamingo import RoboFlamingo
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/model/backbone/roboflamingo.py", line 12, in <module>
    from robovlms.model.backbone.base_backbone import BaseRoboVLM, load_config, deep_update
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/model/backbone/base_backbone.py", line 13, in <module>
    from robovlms.data.vid_llava_constants import (
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/data/__init__.py", line 5, in <module>
    from .vid_llava_dataset import VideoLLaVADataset
  File "/home/billy/25-1kp/vla/RoboVLMs_upstream/robovlms/data/vid_llava_dataset.py", line 147, in <module>
    model: transformers.PreTrainedModel,
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/utils/import_utils.py", line 2317, in __getattr__
    module = self._get_module(self._class_to_module[name])
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/utils/import_utils.py", line 2347, in _get_module
    raise e
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/utils/import_utils.py", line 2345, in _get_module
    return importlib.import_module("." + module_name, self.__name__)
  File "/usr/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/modeling_utils.py", line 70, in <module>
    from .loss.loss_utils import LOSS_MAPPING
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/loss/loss_utils.py", line 21, in <module>
    from .loss_d_fine import DFineForObjectDetectionLoss
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/loss/loss_d_fine.py", line 21, in <module>
    from .loss_for_object_detection import (
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/loss/loss_for_object_detection.py", line 32, in <module>
    from transformers.image_transforms import center_to_corners_format
  File "/home/billy/.cache/pypoetry/virtualenvs/robovlms-ASlHafON-py3.10/lib/python3.10/site-packages/transformers/image_transforms.py", line 49
    import tensorflow as tf
    ^
IndentationError: expected an indented block after 'try' statement on line 48
